--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8"/>
+    <title>Rafael Clemente</title>
+    
+    <meta http-equiv="refresh" content="0; URL='https://github.com/rafaeljc'"/>
+</head>
+<body>
+</body>
+</html>
